<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/Tablayoutmain"
        app:tabTextColor="@color/white"
        app:tabSelectedTextColor="@color/white"
        android:background="@color/blue"
        app:tabIndicatorColor="@color/white"
        />

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="50dp"-->
<!--        android:background="@color/dark_blue"-->
<!--        android:id="@+id/Layoutone"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        >-->
<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="40dp"-->
<!--            android:text="@string/roadmap_for_developers"-->
<!--            android:textColor="@color/white"-->
<!--            android:layout_margin="10dp"-->
<!--            android:id="@+id/txtDevelopers"-->
<!--            android:textSize="26sp"-->
<!--            android:textStyle="bold"/>-->


<!--    </LinearLayout>-->

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/Tablayoutmain">-->

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:id="@+id/ScrollView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Tablayoutmain">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:id="@+id/RoadmapLayoutMain"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    app:cardElevation="20dp"
                    app:cardBackgroundColor="@color/yelow"
                    android:id="@+id/C_Card"
                    android:backgroundTint="@color/yelow"
                    app:cardCornerRadius="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/txtC"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/imgC"
                            android:layout_margin="5dp"
                            android:layout_toEndOf="@+id/imgC"
                            android:text="@string/c_programing_language"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/imgC"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="20dp"
                            android:src="@drawable/c" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/txtC"
                            android:layout_toEndOf="@+id/imgC"
                            android:text="@string/author_dennis_ritchie"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/Card_CPlus"
                    app:cardElevation="20dp"
                    app:cardBackgroundColor="@color/light_green"
                    android:backgroundTint="@color/light_green"
                    app:cardCornerRadius="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/imgCPlus"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="20dp"
                            android:src="@drawable/c_plusplus" />

                        <TextView
                            android:id="@+id/txtCPlus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/imgCPlus"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginBottom="5dp"
                            android:layout_toEndOf="@+id/imgCPlus"
                            android:text="@string/c_programing"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/txtCPlus"
                            android:layout_toEndOf="@+id/imgCPlus"
                            android:text="@string/author_bjarne_stroustrup"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/Card_Java"
                    app:cardElevation="20dp"
                    app:cardBackgroundColor="@color/blue"
                    android:backgroundTint="@color/blue"
                    app:cardCornerRadius="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/imgJava"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="20dp"
                            android:src="@drawable/java" />

                        <TextView
                            android:id="@+id/txtJava"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/imgJava"
                            android:layout_margin="5dp"
                            android:layout_toEndOf="@+id/imgJava"
                            android:text="@string/java_programing"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/txtJava"
                            android:layout_toEndOf="@+id/imgJava"
                            android:text="@string/author_james_gosling"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/Card_Python"
                    app:cardElevation="20dp"
                    app:cardBackgroundColor="@color/dark_blue"
                    android:backgroundTint="@color/dark_blue"
                    app:cardCornerRadius="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/imgPython"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="20dp"
                            android:src="@drawable/python" />

                        <TextView
                            android:id="@+id/txtPython"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/imgPython"
                            android:layout_margin="5dp"
                            android:layout_toEndOf="@+id/imgPython"
                            android:text="@string/python_programing"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/txtPython"
                            android:layout_toEndOf="@+id/imgPython"
                            android:text="@string/author_guido_van_rossum"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/Card_block"
                    app:cardElevation="20dp"
                    app:cardBackgroundColor="@color/pink"
                    android:backgroundTint="@color/pink"
                    app:cardCornerRadius="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/imgBlockChain"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="20dp"
                            android:src="@drawable/blockchain" />

                        <TextView
                            android:id="@+id/txtBlockChain"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/imgBlockChain"
                            android:layout_margin="5dp"
                            android:layout_toEndOf="@+id/imgBlockChain"
                            android:text="@string/block_chain"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/txtBlockChain"
                            android:layout_toEndOf="@+id/imgBlockChain"
                            android:text="@string/author_satoshi_nakamoto"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/Card_Cybercurity"
                    app:cardElevation="20dp"
                    app:cardBackgroundColor="@color/light_red"
                    android:backgroundTint="@color/light_red"
                    app:cardCornerRadius="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/imgCyberSecurity"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="20dp"
                            android:src="@drawable/cyber" />

                        <TextView
                            android:id="@+id/txtCyberSecurity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/imgCyberSecurity"
                            android:layout_margin="5dp"
                            android:layout_toEndOf="@+id/imgCyberSecurity"
                            android:text="@string/cyber_security"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/txtCyberSecurity"
                            android:layout_toEndOf="@+id/imgCyberSecurity"
                            android:text="@string/author_bob_thomas"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>



        </androidx.core.widget.NestedScrollView>

<!--    </LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CourseLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ScrollView"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coming_soon"
            android:textSize="28sp"/>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>